Adding somethings to website.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="index.html">Domov</a></li>
                 <li><a href="about.html">O nás</a></li>
-                <li><a href="menu.html">Menu</a></li>
+                <li><a href="menu.html">Ponuka</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
                 <li><a href="galery.html">Galeria</a></li>
             </ul>
@@ -19,6 +19,8 @@
     </div>
 </head>
 <body>
-    
+    <div class="body">
+        <h1>Sobotienka</h1><br><br><a href="menu.html"><button class="btn">ZOBRAZIŤ PONUKU</button></a>
+    </div>
 </body>
 </html>
