--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="index.html">Domov</a></li>
                 <li><a href="about.html">O nás</a></li>
-                <li><a href="menu.html">Menu</a></li>
+                <li><a href="menu.html">Ponuka</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
                 <li><a href="galery.html">Galeria</a></li>
             </ul>
