New commit idk the name.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="body">
-        <h1>Sobotienka</h1><br><br><a href="menu.html"><button class="btn">ZOBRAZIŤ PONUKU</button></a>
+        <br><br><br><br><br><br><br><br><br><h1 style="color: rgb(83, 66, 43);">Sobotienka</h1><br><br><a href="menu.html"><button class="btn">ZOBRAZIŤ PONUKU</button></a>
     </div>
 </body>
 </html>
